Fix whitespace

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -710,8 +710,7 @@ details > summary
 }
 
 /* fieldset / legend */
-fieldset
-  { }
+fieldset {}
 legend {
   font-weight: bold;
   margin: var(--margin);
